--- a/src/app.scss
+++ b/src/app.scss
@@ -2,11 +2,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif ;
+	font-family: 'Roboto', sans-serif;
 }
 
 * {
-	.links {
+	.link {
 		text-decoration: none;
 		color: inherit;
 	}
